--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="pipe_seperater">|</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="no_description">No Description</string>
+    <string name="title_activity_user_details_compose">UserDetailsComposeActivity</string>
 </resources>
